name:                sshtun
version:             1.0.0
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2012 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
--homepage:            http://foo/bar/baz.html
synopsis:            Foo
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.0.4
--extra-source-files:  TEST SUITE FILES

source-repository    head
   type:             darcs
   location:         http://ui3.info/darcs/sshtun

executable           sshtun
   main-is:          main.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, containers, curl, hslogger, mtl,
                     process, regex-compat, stm
   ghc-options:      -Wall -threaded

--test-suite           pristine-tests
--   type:             exitcode-stdio-1.0
--   main-is:          pristine-tests.hs
--   build-depends:    base
--   hs-source-dirs:   src testsuite
--   ghc-options:      -Wall
