name:                sshtun
version:             1.0.0
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2012 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://ui3.info/d/proj/sshtun.html
synopsis:            Foo
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.0.4

data-dir:            resources
data-files:          README
                     sshtun.conf
                     logrotate.d/sshtun

source-repository    head
   type:             darcs
   location:         http://ui3.info/darcs/sshtun

executable           sshtun
   main-is:          main.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, containers, curl, directory,
                     hdaemonize, hslogger, mtl, process, regex-compat,
                     stm, unix
   ghc-options:      -Wall -threaded
